--- a/_posts/2020-01-02-the-us-narrative-today.html
+++ b/_posts/2020-01-02-the-us-narrative-today.html
@@ -1727,5 +1727,108 @@ stories:
   state: Virginia
   domain: http://www.dailypress.com/
   link: http://www.dailypress.com/news/crime/dp-nw-officer-involved-shooting-20191230-dfwwzkyfk5cgjhwuu7pdehtkii-story.html
+images:
+- name: oldhotel-oldhotel-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dali-three.jpg
+- name: supreme-court-supremecourt-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dark-rain.jpg
+- name: store-on-corner-oldcabin-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-graham-sutherland.jpg
+- name: oldhotel-oldhotel-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-bright-sand.jpg
+- name: fence-fence-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-electricity.jpg
+- name: cargo-ship-cargo-ship-on-sea-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-umberto-bocc.jpg
+- name: dragon_close-up-udnie.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-udnie.jpg
+- name: sand-hand-sand-hand-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-purple-pond.jpg
+- name: bf-skinner-castle-clouds-green-lawn.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-castle-clouds-green-lawn.jpg
+- name: statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
+- name: aws-s3-blossombar-blossombar-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still.jpg
+- name: powerlines-power-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-gred-mash.jpg
+- name: old-granary-field-granaryfield-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-diego-rivera1.jpg
+- name: carry-load-carryload-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-brush.jpg
+- name: supreme-court-supremecourt-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-kand-two.jpg
+- name: old-granary-field-granaryfield-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dark-rain.jpg
+- name: ellis-island-ellis-island-room-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-hot-spicy.jpg
+- name: dragon-desert-desert-dragon-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-light-dali.jpg
+- name: stalin-time-memorial-to-the-jews-in-berlin-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-memorial-to-the-jews-in-berlin-2.jpg
+- name: curtain-curtain-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-smooth-ride.jpg
+- name: fence-fence-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-internet-numbers.jpg
+- name: birdhouse-birdhouse-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-umberto-bocc.jpg
+- name: ellis-island-ellisisland-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dali-three.jpg
+- name: ellis-island-ellisisland-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-cinnamon-rolls.jpg
+- name: power-lines-power-lines-empty-space.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space.jpg
+- name: old-gas-pumps-oldgaspumps-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colorful-dream.jpg
+- name: downtown-la-dark-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-dark-dali.JPG
+- name: beach-rocks-beach-rocks-currents-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-ww2-dresden.jpg
+- name: amusement-park-amusement-park-2-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dark-rain.jpg
+- name: catacombs-catacombs-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dali-three.jpg
+- name: carry-load-carryload-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-smoking-cigarette.jpg
+- name: oldbarn-oldbarn-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-green-zuma.jpg
+- name: windowmountain-window-mountain-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-monet-one.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-horiz-circuit.jpg
+- name: curtain-curtain-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-constitution.jpg
+- name: school-clouds-church-clouds-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dark-soul.jpg
+- name: razorwire-DSC-0080-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colored-circuits.jpg
+- name: death-valley-death-valley-national-park-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-smooth-ride.jpg
+- name: braceros-domingo-ulloa-statue-supreme-court.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-statue-supreme-court.jpg
+- name: yuma-bank-yuma-bak-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-alien-goggles.jpg
+- name: legal-statue-legalstatue-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dry-skin.jpg
+- name: status-berlin-status-berlin-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-creativity.jpg
+- name: stalin-time-downtown-sidewalk-washington.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-downtown-sidewalk-washington.jpg
+- name: status-berlin-status-berlin-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-jap-wav-pr.jpg
+- name: mediterranean-mediterranean-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-deep-connections.jpg
+- name: abandonedbuildings_crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_crabapple.jpg
+- name: birdhouse-birdhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-colored-circuits.jpg
+- name: art-museum-art-museum-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-soul.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-hot-spicy.jpg
+- name: stalin-time-train-coming-up-tracks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-coming-up-tracks.jpg
 ---
 Uber Driver Graduates College After Passenger Pays Debt.&nbsp;Johnson Lifts Minnesota Over Auburn In Outback.&nbsp;Woman Arrested After Punching Boyfriend.&nbsp;Martin Scorsese Is 'embracing' Death.&nbsp;City Prepares For A New Public Works Building.&nbsp;Sovereign Citizens Not Above The Law.&nbsp;Man Suffers Burns In Fire At West First Street Residence.&nbsp;Ladysmith Schools Mull Building, Athletic Complex Funding Options.&nbsp;
